<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/settings_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:background="@color/gray"
        android:elevation="@dimen/card_elevation">

        <ImageButton
            android:id="@+id/settings_close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_chevron_left_32dp"
            android:background="@color/transparent"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/margin_eight"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_header_text"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">

        <TextView
            style="@style/MyPageTextStyle"
            android:text="@string/settings_notice_text"/>

        <ImageView
            android:id="@+id/settings_notice_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_chevron_right_24dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/margin_six"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/indicator"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">

        <TextView
            style="@style/MyPageTextStyle"
            android:text="@string/settings_guide_text"/>

        <ImageView
            android:id="@+id/settings_guide_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_chevron_right_24dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/margin_six"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/indicator"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">

        <TextView
            style="@style/MyPageTextStyle"
            android:text="@string/settings_contact"/>

        <ImageView
            android:id="@+id/settings_contact_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_chevron_right_24dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/margin_six"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/indicator"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/notice_background"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/indicator"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">


        <Switch
            android:id="@+id/settings_push_switch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/settings_push_alarm"
            style="@style/MyPageTextStyle"
            android:layout_marginEnd="@dimen/margin_six"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/indicator"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">

        <Switch
            android:id="@+id/settings_sound_switch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/settings_sound"
            style="@style/MyPageTextStyle"
            android:layout_marginEnd="@dimen/margin_six" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/indicator"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/notice_background"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/indicator"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">

        <TextView
            style="@style/MyPageTextStyle"
            android:text="@string/settings_logout"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/indicator"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">

        <TextView
            style="@style/MyPageTextStyle"
            android:text="@string/settings_version_info"/>

        <TextView
            android:id="@+id/settings_version_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/content_horizontal_margin"
            android:textColor="@color/black"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/indicator"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

</LinearLayout>