<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/margin_eight"
        app:cardElevation="@dimen/card_elevation"
        android:layout_centerInParent="true">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close_black_24dp"
            android:background="@color/transparent"
            android:layout_gravity="end"
            android:layout_margin="@dimen/margin_ten"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="@color/activated_text_color"
                android:text="@string/my_page_enter_recommend_code"
                android:layout_margin="@dimen/margin_eight"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_page_enter_guide_text"
                android:textColor="@color/black"
                android:textSize="12dp"
                android:gravity="center_horizontal"
                android:layout_marginBottom="@dimen/margin_eight"/>

            <EditText
                android:id="@+id/my_page_recommendation_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:textSize="12dp"
                android:textColor="@color/black"
                android:layout_marginBottom="@dimen/margin_eight"/>

            <Button
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:background="@drawable/btn_round_activated_color"
                android:text="@string/my_page_confirm"
                android:textSize="12dp"/>


        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>