<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/my_page_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:background="@color/header_background_color"
        android:elevation="@dimen/card_elevation">

        <ImageButton
            android:id="@+id/my_page_close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_chevron_left_32dp"
            android:background="@color/transparent"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/margin_eight"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_page_header_text"
            android:textColor="@color/week_success_color"
            android:textSize="18dp"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/my_page_profile_layout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/my_page_thumbnail"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/margin_sixteen"
            android:layout_marginEnd="@dimen/margin_four"/>

        <TextView
            android:id="@+id/my_page_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/my_page_thumbnail"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/margin_eight"
            android:textColor="@color/gray"/>

        <ImageButton
            android:id="@+id/setting_edit_nickname_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_mode_edit_24dp"
            android:background="@color/transparent"
            android:layout_toEndOf="@id/my_page_nickname"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <View
        android:id="@+id/my_page_profile_indicator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/my_page_text_color"
        android:layout_below="@id/my_page_profile_layout"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">

        <TextView
            style="@style/MyPageTextStyle"
            android:text="@string/my_page_my_money"/>

        <ImageView
            android:id="@+id/my_page_my_money_chevron"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_chevron_right_24dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/my_page_my_money_chevron"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/margin_eight"
            android:textColor="@color/gray"
            android:textSize="12dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/my_page_text_color"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">

        <TextView
            style="@style/MyPageTextStyle"
            android:text="@string/my_page_phone_number"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/content_horizontal_margin"
            android:layout_alignParentEnd="true"
            android:textColor="@color/gray"
            android:textSize="12dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/content_horizontal_margin"
            android:layout_alignParentEnd="true"
            android:textColor="@color/gray"
            android:textSize="12dp"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:background="@color/indicator_two"/>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">

        <TextView
            style="@style/MyPageTextStyle"
            android:text="@string/my_page_my_recommend_code"/>

        <TextView
            android:id="@+id/my_page_my_recommendation_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/content_horizontal_margin"
            android:layout_alignParentEnd="true"
            android:textColor="@color/my_page_text_color"
            android:textSize="12dp"
            android:text="ddd"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/my_page_text_color"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">

        <TextView
            style="@style/MyPageTextStyle"
            android:text="@string/my_page_enter_recommend_code"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/content_horizontal_margin"
            android:layout_alignParentEnd="true"
            android:textColor="@color/gray"
            android:textSize="12dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/content_horizontal_margin"
            android:layout_alignParentEnd="true"
            android:textColor="@color/gray"
            android:textSize="12dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/indicator"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

</LinearLayout>